@@ -9,6 +9,8 @@ import com.mojang.blaze3d.vertex.PoseStack;
 import com.wynntils.core.components.Managers;
 import com.wynntils.core.components.Models;
 import com.wynntils.core.components.Services;
+import com.wynntils.core.persisted.config.HiddenConfig;
+import com.wynntils.features.debug.MappingProgressFeature;
 import com.wynntils.features.map.MainMapFeature;
 import com.wynntils.models.marker.type.DynamicLocationSupplier;
 import com.wynntils.models.marker.type.MarkerInfo;
@@ -248,6 +250,11 @@ public final class MainMapScreen extends AbstractMapScreen {
 
         renderMapFeatures(poseStack, mouseX, mouseY);
 
+        if (Managers.Feature.getFeatureInstance(MappingProgressFeature.class).isEnabled()) {
+            renderChunkBorders(poseStack);
+            BUFFER_SOURCE.endBatch();
+        }
+
         // Cursor
         renderCursor(
                 poseStack,
@@ -378,18 +385,22 @@ public final class MainMapScreen extends AbstractMapScreen {
                                     new Location(hovered.getLocation()),
                                     iconPoi.getIcon(),
                                     customPoi.getColor(),
-                                    customPoi.getColor());
+                                    customPoi.getColor(),
+                                    hovered.getName());
                         } else {
                             Models.Marker.USER_WAYPOINTS_PROVIDER.addLocation(
-                                    new Location(hovered.getLocation()), iconPoi.getIcon());
+                                    new Location(hovered.getLocation()), iconPoi.getIcon(), hovered.getName());
                         }
                     } else {
-                        Models.Marker.USER_WAYPOINTS_PROVIDER.addLocation(new Location(hovered.getLocation()));
+                        Models.Marker.USER_WAYPOINTS_PROVIDER.addLocation(
+                                new Location(hovered.getLocation()), hovered.getName());
                     }
                 } else {
                     final Poi finalHovered = hovered;
-                    Models.Marker.USER_WAYPOINTS_PROVIDER.addLocation(new DynamicLocationSupplier(
-                            () -> finalHovered.getLocation().asLocation()));
+                    Models.Marker.USER_WAYPOINTS_PROVIDER.addLocation(
+                            new DynamicLocationSupplier(
+                                    () -> finalHovered.getLocation().asLocation()),
+                            finalHovered.getName());
                 }
                 return true;
             }
@@ -434,7 +445,7 @@ public final class MainMapScreen extends AbstractMapScreen {
 
         if (shareCompass) {
             // FIXME: Find an intuitive way to share compasses with multiple waypoints
-            LocationUtils.shareCompass(target, markers.get(0).location());
+            LocationUtils.shareCompass(target, markers.getFirst().location());
         } else {
             LocationUtils.shareLocation(target);
         }
